[package]
name = "glasswall"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# Added "system-tray" feature required for background operation
tauri = { version = "1", features = [ "shell-open", "system-tray" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sysinfo = "0.29"
